refactor(application): extract application model to new module (#2673)
* refactor(application): extract application model to new module
* refactor(application): use ApplicationNodeContainerConverter
* refactor(application): remove apache commons-lang3 deps