@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2019 Bonitasoft S.A.
+ * Copyright (C) 2023 Bonitasoft S.A.
  * Bonitasoft, 32 rue Gustave Eiffel - 38000 Grenoble
  * This library is free software; you can redistribute it and/or modify it under the terms
  * of the GNU Lesser General Public License as published by the Free Software Foundation
@@ -13,8 +13,7 @@
  **/
 package org.bonitasoft.engine.business.application.exporter;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.tuple;
+import static org.assertj.core.api.Assertions.*;
 import static org.bonitasoft.engine.business.application.xml.ApplicationNodeBuilder.newApplication;
 import static org.bonitasoft.engine.business.application.xml.ApplicationNodeBuilder.newApplicationContainer;
 
@@ -22,24 +21,18 @@ import java.io.ByteArrayInputStream;
 
 import javax.xml.bind.UnmarshalException;
 
-import org.apache.commons.io.IOUtils;
 import org.bonitasoft.engine.business.application.xml.ApplicationNodeContainer;
 import org.custommonkey.xmlunit.XMLAssert;
 import org.custommonkey.xmlunit.XMLUnit;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 import org.xml.sax.InputSource;
 
 public class ApplicationNodeContainerConverterTest {
 
-    @Rule
-    public ExpectedException expectedException = ExpectedException.none();
+    private final ApplicationNodeContainerConverter converter = new ApplicationNodeContainerConverter();
 
     @Test
     public void should_marshall_applicationContainer_to_xml() throws Exception {
-        final ApplicationNodeContainerConverter converter = new ApplicationNodeContainerConverter();
-
         final byte[] xml = converter.marshallToXML(newApplicationContainer()
                 .havingApplications(newApplication("myApp", "My App", "1.0")).create());
 
@@ -50,27 +43,23 @@ public class ApplicationNodeContainerConverterTest {
 
     @Test
     public void should_unmarshall_xml_into_applicationContainer() throws Exception {
-        final ApplicationNodeContainerConverter converter = new ApplicationNodeContainerConverter();
+        try (var inputStream = ApplicationNodeContainerConverterTest.class.getResourceAsStream("/application.xml")) {
+            assertThat(inputStream).isNotNull();
+            final ApplicationNodeContainer container = converter.unmarshallFromXML(inputStream.readAllBytes());
 
-        final ApplicationNodeContainer container = converter.unmarshallFromXML(
-                IOUtils.toByteArray(
-                        ApplicationNodeContainerConverterTest.class.getResourceAsStream("/application.xml")));
-
-        assertThat(container).isNotNull();
-        assertThat(container.getApplications()).extracting("token", "displayName", "version")
-                .contains(tuple("myApp", "My App", "1.0"));
-
+            assertThat(container).isNotNull();
+            assertThat(container.getApplications()).extracting("token", "displayName", "version")
+                    .contains(tuple("myApp", "My App", "1.0"));
+        }
     }
 
     @Test
     public void should_fail_unmarshall_xml_into_applicationContainer() throws Exception {
-        final ApplicationNodeContainerConverter converter = new ApplicationNodeContainerConverter();
-
-        expectedException.expect(UnmarshalException.class);
-
-        converter.unmarshallFromXML(
-                IOUtils.toByteArray(
-                        ApplicationNodeContainerConverterTest.class.getResourceAsStream("/badApplication.xml")));
+        try (var inputStream = ApplicationNodeContainerConverterTest.class.getResourceAsStream("/badApplication.xml")) {
+            assertThat(inputStream).isNotNull();
+            assertThatExceptionOfType(UnmarshalException.class)
+                    .isThrownBy(() -> converter.unmarshallFromXML(inputStream.readAllBytes()));
+        }
     }
 
 }
